0.3.2   xxx
 - fix: https://github.com/opensolutions/ViMbAdmin/issues/1

0.3.1   2011-08-23
 - Forgot to update changelog got 0.3 release.

0.3     2011-08-23
 - Changes required for the migration to GitHub. No new features / bugfixes 
   or functionality.

0.2.6   2011-08-08
 - fix: trim passwords at login and when entered by an admin
 - fix: could not edit aliases

0.2.5   2011-05-23
 - add: CSS code for demo system at http://www.opensolutions.ie/vimbadmin/
 - add: new favicon based on logo from Limeworks Australia - http://www.limeworks.com.au
 - fix: issue #5 in vimbadmin: mktime throws a strict error (r61)
 - fix: issue #8 in vimbadmin: Cannot add alias from Mailbox view (r66)
 - fix: the autocomplete functionality (used on the Edit / Add Alias page) (r63)
 - fix: the possible "Fatal error: spl_autoload() ... Class Doctrine_Event could not be loaded in Doctrine_Record ..." (r64)
 - fix: the "inArray" JavaScript validator functionality was broken (r65)
 - upd: jQuery 1.5.2
 - upd: jQuery Validation 1.8.0
 - fix: add StringToLower filter to domain, mailbox and alias forms


0.2.4   2011-04-07
 - add: new logo thanks to Limeworks Australia - http://www.limeworks.com.au
 - upd: new login screen design with new logo


0.2.3   2011-03-30
 - fix: critical bug fix preventing email being sent during first use set up
        (will only have affected those choosing a random password)


0.2.2   2011-03-29
 - add: version checking (once per day per super) and alerting
 - add: version displayed in the footer
 - fix: adding mailbox alias
 - fix: edit alias
 - fix: fatal error when listing aliases


0.2.1   2011-03-25
 - upd: it is possible now to add domains to admins through the
        Administrators->Domains screen
 - upd: checkbox to include/exclude mailbox aliases on the Maliboxes->Aliases
        and Aliases pages
 - fix: the DataTables search was searching in the columns of the buttons too,
        providing fake results


0.2     2011-03-24